[package]
name = "test_nest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
httparse = { version = "1" }
http = "0.2.11"
reqwest = "0.12"
toml = "0.8.16"
serde = { version = "1", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"